# ten-sorting-algorithms

./: CMakeLists.txt  README.md
src/: main.cpp
src/algoritms/: CMakeLists.txt  sort.cpp  sort.h
src/widgets/: AbstractSourceModel.cpp  AbstractSourceModel.h  AbstractTestModel.cpp  AbstractTestModel.h  AlgorithmHandler.cpp  AlgorithmHandler.h  CMakeLists.txt  ChangeLangDialog.cpp  ChangeLangDialog.h  GraphView.cpp  GraphView.h  Log.h  MainWindow.cpp  MainWindow.h  Model.cpp  RandomSourceModel.cpp  RandomSourceModel.h  SourceModelHandler.cpp  SourceModelHandler.h  StandardTestModel.cpp  StandardTestModel.h  TableModel.cpp  TableModel.h  TableView.cpp  TableView.h  algorithmThread.cpp  algorithmThread.h  changeLangDialog.cpp  main.cpp  mainWindow.cpp  mainWindow.h  model.cpp  model.h  precompile.h  randomSourceModel.cpp  randomSourceModel.h  sourceModel.h  testThread.cpp  testThread.h  visual.cpp  (+5 more)
src/widgets/algorithmThreads/: bubleAlgorithmThread.cpp  bubleAlgorithmThread.h  cycleAlgorithmThread.cpp  cycleAlgorithmThread.h
src/widgets/ts/: en_US.ts  uk_UA.ts
